# bq25770g

./: Cargo.toml  README.md
src/: lib.rs  registers.rs
src/registers/: adc_cmpin_tr.rs  adc_ibat.rs  adc_iin.rs  adc_option.rs  adc_psys.rs  adc_vbat.rs  adc_vbus.rs  adc_vsys.rs  auto_charge.rs  autotune_force.rs  autotune_read.rs  charge_current.rs  charge_option0.rs  charge_option1.rs  charge_option2.rs  charge_option3.rs  charge_option4.rs  charge_option5.rs  charge_profile.rs  charge_voltage.rs  charger_status0.rs  charger_status1.rs  device.rs  gate_drive.rs  gm_adjust_force.rs  iin_dpm.rs  iin_host.rs  manufacturer.rs  otg_current.rs  otg_voltage.rs  prochot_option0.rs  prochot_option1.rs  prochot_status.rs  vin_dpm.rs  virtual_control.rs  vmin_active_protection.rs  vsys_min.rs
