[package]
name = "bq2577x"
version = "0.1.0"
authors = ["Felipe Balbi <febalbi@microsoft.com>"]
repository = "https://github.com/pop-project/bq2577x"
license = "MIT"
description = "Platform-agnostic Rust driver for the BQ2577x series of battery chargers."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/pop-project/bq2577x"
documentation = "https://docs.rs/bq2577x"
include = [
	"/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
]
edition = "2021"

[dependencies]
bitfield-struct = "0.8.0"
defmt = { version = "0.3.8", optional = true }
embedded-hal-async = "1.0.0"

[features]
defmt = ["dep:defmt"]
